Some Updates Sorry

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,6 +92,6 @@ jobs:
   build:
     permissions: write-all
     needs: check-updates
-    uses: ./.github/workflows/build.yml
+    uses: ./.github/workflows/build-release.yml
     if: ${{ needs.check-updates.outputs.update == 'true' || needs.check-updates.outputs.branch_exists == 'false' }}
     secrets: inherit
