--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,4 +1,4 @@
-name: "Build kernels for test"
+name: "Build kernels for release"
 
 env:
   OUT_DIR: "${{ github.workspace }}/out"
@@ -223,7 +223,7 @@ jobs:
         working-directory: ${{ env.KERNEL_NAME }}
         env:
           arch: ${{ steps.generate-args.outputs.ARCH }}
-        if: ${{ env.withRoot == "ksu" || env.withRoot == "ksun" }}
+        if: ${{ env.withRoot == 'ksu' || env.withRoot == 'ksun' }}
         run: |
           if [ -d "./KernelSU" ]; then
             rm -rf "./KernelSU"
@@ -275,7 +275,7 @@ jobs:
         working-directory: ${{ env.KERNEL_NAME }}
         env:
           arch: ${{ steps.generate-args.outputs.ARCH }}
-        if: ${{ (env.withRoot == "true" || env.withRoot == "ksun") && env.withSUSFS == 'true' }}
+        if: ${{ (env.withRoot == 'true' || env.withRoot == 'ksun') && env.withSUSFS == 'true' }}
         run: |
 
           if [ -d "./SUSFS" ]; then
