Added Bot: cvnbot.py script by @rifsxd

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -377,6 +377,31 @@ jobs:
           name: "${{ env.KERNEL_DEVICE }}-${{ env.KERNEL_NAME }}-KSUNext-${{ steps.integrate-kernelsu-next.outputs.KERNELSU_NEXT_VERSION }}-SUSFS-${{ env.builddate }}"
           path: AnyKernel3/*
 
+      - name: "📤 Upload to Telegram"
+        if: ${{ env.useAnykernel == 'true' && env.release == 'true' }}
+        env:
+          API_ID: ${{ secrets.API_ID }}
+          API_HASH: ${{ secrets.API_HASH }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
+          COMMIT_URL: ${{ github.event.head_commit.url }}
+          RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          TITLE: "${{ env.KERNEL_NAME }} Kernel"
+          VERSION: "v${{ env.builddate }}.${{ github.run_number }}"
+          KERNEL_NAME: "${{ env.KERNEL_NAME }}"
+          KERNEL_DEVICE: "${{ env.KERNEL_DEVICE }}"
+          BUILD_DATE: "${{ env.builddate }}"
+          KERNELSU_NEXT_VERSION: "${{ steps.integrate-kernelsu-next.outputs.KERNELSU_NEXT_VERSION }}"
+        run: |
+          if [ ! -z "$BOT_TOKEN" ]; then
+            KERNEL_FILE="${{ env.WORKSPACE }}/${{ env.KERNEL_DEVICE }}-${{ env.KERNEL_NAME }}-${{ env.builddate }}.zip"
+            echo "Kernel file: $KERNEL_FILE"
+            
+            pip3 install telethon
+            python3 $GITHUB_WORKSPACE/.github/scripts/cvnbot.py "$KERNEL_FILE"
+          fi
+
       - name: 🧧 Create GitHub Release => (${{ env.builddate }})
         continue-on-error: false
         uses: softprops/action-gh-release@v2.1.0
