--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -399,7 +399,7 @@ jobs:
             echo "Kernel file: $KERNEL_FILE"
             
             pip3 install telethon
-            python3 $GITHUB_WORKSPACE/.github/scripts/cvnbot.py "$KERNEL_FILE"
+            python3 $WORKSPACE/scripts/cvnbot.py "$KERNEL_FILE"
           fi
 
       - name: 🧧 Create GitHub Release => (${{ env.builddate }})
