--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -395,10 +395,10 @@ jobs:
 
       - name: "🔃 Upload Kernel to Telegram"
         if: ${{ env.useAnykernel == 'true' && env.release == 'true' }}
-        uses: appleboy/telegram-action@master
+        uses: appleboy/telegram-action@v1.0.0
         with:
-          to: "@cvnertnc"  #CHAT_ID
-          files: "${{ env.WORKSPACE }}/${{ env.KERNEL_DEVICE }}-${{ env.KERNEL_NAME }}-KSUNext-${{ steps.integrate-kernelsu-next.outputs.KERNELSU_NEXT_VERSION }}-SUSFS-${{ env.builddate }}.zip"
+          to: "@cvnertnc"
+          document: "${{ env.WORKSPACE }}/${{ env.KERNEL_DEVICE }}-${{ env.KERNEL_NAME }}-KSUNext-${{ steps.integrate-kernelsu-next.outputs.KERNELSU_NEXT_VERSION }}-SUSFS-${{ env.builddate }}.zip"
           caption: |
             *${{ env.KERNEL_NAME }} Kernel - v${{ env.builddate }}.${{ github.run_number }}*
             ```
@@ -420,4 +420,4 @@ jobs:
             _By @the_CEHunter_
           parse_mode: Markdown
         env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
