--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,3 +95,15 @@ jobs:
     uses: ./.github/workflows/build-release.yml
     if: ${{ needs.check-updates.outputs.update == 'true' || needs.check-updates.outputs.branch_exists == 'false' }}
     secrets: inherit
+
+  trigger-telegram-report:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Telegram Report
+        run: |
+          curl -X POST \
+            -H "Accept: application/vnd.github.v3+json" \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/repos/cvnertnc/Begonia-Kernel-Builder/dispatches \
+            -d '{"event_type": "trigger-telegram-report"}'
